# rust-actix-askama-starter

./: Cargo.toml  README.md  sailfish.yml
files/assets/: index.page.3b6bbaee.js  index.page.6dbc34b5.js  index.page.c673fbc5.css  vendor.06c74fdb.js
files/assets/renderer/: _default.page.client.tsx.3f29853b.css  _default.page.client.tsx.fba7dcd2.js
src/: main.rs
templates/: index.html
templates/about/: index.html
