[package]
name = "ras"
version = "0.0.1"
authors = ["Cid Huang <cidhuang@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.8"
actix-http = "2"
actix-files = "0.5.0"
actix-web = { version = "3", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
sailfish = "0.3.3"
